# EnvironmentalVariable

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  readme.markdown
assets/: README.md
docs/: ARCHITECTURE.md  COMPLETION_SUMMARY.md  FEATURE_COMPLETION.md  FINAL_REPORT.md  IMPLEMENTATION_STATUS.md  MIGRATION.md  MODERN_UI.md  OPTIMIZATION_SUMMARY.md  QUICK_START.md  TAURI_README.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
